--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -7,11 +7,8 @@
         "id": "f91a533ac2cb26a3",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "计算机科学/安全攻防/前端代码混淆.md",
-            "mode": "source"
-          }
+          "type": "graph",
+          "state": {}
         }
       }
     ],
@@ -68,7 +65,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "计算机科学/安全攻防/前端代码混淆.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,6 +84,7 @@
   },
   "active": "f91a533ac2cb26a3",
   "lastOpenFiles": [
+    "README.md",
     "计算机科学/安全攻防/前端代码混淆.md",
     "SSL.md",
     "计算机科学/node源码/Crypto.md",
@@ -96,7 +93,6 @@
     "计算机科学/设计模式六大原则.md",
     "计算机科学/SDK设计原则.md",
     "计算机科学/编译原理.md",
-    "计算机科学/http  （HyperText Transfer Protocol）.md",
-    "计算机科学/C10K和C1000K问题.md"
+    "计算机科学/http  （HyperText Transfer Protocol）.md"
   ]
 }
