--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,11 +4,14 @@
     "type": "split",
     "children": [
       {
-        "id": "f91a533ac2cb26a3",
+        "id": "f80129c4e94941d4",
         "type": "leaf",
         "state": {
-          "type": "graph",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "认知科学/杂文/20210906.md",
+            "mode": "preview"
+          }
         }
       }
     ],
@@ -65,6 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "认知科学/杂文/20210906.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -82,17 +86,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "f91a533ac2cb26a3",
+  "active": "f80129c4e94941d4",
   "lastOpenFiles": [
-    "README.md",
-    "计算机科学/安全攻防/前端代码混淆.md",
-    "SSL.md",
-    "计算机科学/node源码/Crypto.md",
-    "计算机科学/《代码整洁之道》.md",
+    "认知科学/杂文/20210906.md",
+    "认知科学/杂文/上瘾.md",
+    "认知科学/杂文/闪念.md",
+    "认知科学/杂文/人性的漏洞.md",
+    "认知科学/杂文/未命名.md",
     "设计模式.md",
-    "计算机科学/设计模式六大原则.md",
-    "计算机科学/SDK设计原则.md",
-    "计算机科学/编译原理.md",
-    "计算机科学/http  （HyperText Transfer Protocol）.md"
+    "README.md",
+    "计算机科学/安全攻防/noopener、noreferrer和nofollow.md",
+    "document.referrer.md",
+    "nofollow.md"
   ]
 }
